[tool.poetry]
name = "cluecoins"
version = "0.0.0"
description = "A CLI tool to manage the database of Bluecoins, an awesome budget planner for Android"
authors = [
    "Iuliia Kornilova <github@larnaa.pw>",
    "Lev Gorodetskiy <github@drsr.io>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
adbutils = "~1.0.8"
click = "~8.1.3"
requests = "~2.28.1"
pytermgui = "~7.2.0"
PyYAML = "~6.0"
xdg = "~5.1.1"

[tool.poetry.dev-dependencies]
types-requests = "~2.28.11.2"
black = "~22.3.0"
bump2version = "~1.0.1"
diff-cover = "~6.5.0"
flake8-comprehensions = "~3.8.0"
flake8-bugbear = "~22.1.11"
flake8-simplify = "~0.19.2"
flakeheaven = "~1.0.1"
isort = "~5.9.3"
mypy = "~0.960"
pytest = "~7.1.2"
pytest-cov = "~3.0.0"
pytest-xdist = "~2.5.0"
plantuml = "~0.3.0"

[tool.poetry.scripts]
cluecoins = "cluecoins.cli:root"
isort_ = "isort src tests"
black_ = "black src tests"
flake = "flakeheaven lint src tests"
mypy_ = "mypy src tests --strict"
test = ".venv/bin/python -m pytest --cov-report=term-missing --cov=cluecoins --cov-report=xml -v tests"
test-ci = "pytest --cov-report=term-missing --cov=cluecoins --cov-report=xml -v tests"
cover = "diff-cover --compare-branch=master coverage.xml"
dump-schema = "sqlite3 bluecoins.fydb .schema > bluecoins.sql"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
